# libvshadow

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  acinclude.m4  appveyor.yml  autogen.sh  build.ps1  configure.ac  libvshadow-wiki.ini  libvshadow.ini  libvshadow.pc.in  libvshadow.spec.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.travis/: runtests.sh  script.sh
common/: config.h.in
documentation/: Volume Shadow Snapshot (VSS) format.asciidoc
dpkg/: changelog.in  control  copyright  rules  (+1 more)
include/: Makefile.am  libvshadow.h.in
include/libvshadow/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libvshadow/: Makefile.am  libvshadow.c  libvshadow.rc.in  libvshadow_block.c  libvshadow_block.h  libvshadow_block_descriptor.c  libvshadow_block_descriptor.h  libvshadow_block_range_descriptor.c  libvshadow_block_range_descriptor.h  libvshadow_block_tree.c  libvshadow_block_tree.h  libvshadow_block_tree_node.c  libvshadow_block_tree_node.h  libvshadow_codepage.h  libvshadow_debug.c  libvshadow_debug.h  libvshadow_definitions.h.in  libvshadow_error.c  libvshadow_error.h  libvshadow_extern.h  libvshadow_io_handle.c  libvshadow_io_handle.h  libvshadow_libbfio.h  libvshadow_libcdata.h  libvshadow_libcerror.h  libvshadow_libclocale.h  libvshadow_libcnotify.h  libvshadow_libcstring.h  libvshadow_libcthreads.h  libvshadow_libfdata.h  libvshadow_libfdatetime.h  libvshadow_libfguid.h  libvshadow_libuna.h  libvshadow_notify.c  libvshadow_notify.h  libvshadow_ntfs_volume_header.c  libvshadow_ntfs_volume_header.h  libvshadow_store.c  libvshadow_store.h  libvshadow_store_block.c  (+13 more)
macosx/: Introduction.rtf.in  Makefile.am  Readme.rtf
macosx/libvshadow.pmdoc/: 01bin.xml.in  02include.xml.in  03lib.xml.in  04share.xml.in  05python.xml.in  index.xml.in
msvscpp/: Makefile.am  libvshadow.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libvshadow/: libvshadow.vcproj
msvscpp/libvshadow_dll/: libvshadow_dll.vcproj
msvscpp/libwrc/: libwrc.vcproj
msvscpp/pyvshadow/: pyvshadow.vcproj
msvscpp/vshadow_test_block/: vshadow_test_block.vcproj
msvscpp/vshadow_test_block_descriptor/: vshadow_test_block_descriptor.vcproj
msvscpp/vshadow_test_block_range_descriptor/: vshadow_test_block_range_descriptor.vcproj
msvscpp/vshadow_test_block_tree/: vshadow_test_block_tree.vcproj
msvscpp/vshadow_test_block_tree_node/: vshadow_test_block_tree_node.vcproj
msvscpp/vshadow_test_error/: vshadow_test_error.vcproj
msvscpp/vshadow_test_get_version/: vshadow_test_get_version.vcproj
msvscpp/vshadow_test_io_handle/: vshadow_test_io_handle.vcproj
msvscpp/vshadow_test_notify/: vshadow_test_notify.vcproj
msvscpp/vshadow_test_open_close/: vshadow_test_open_close.vcproj
msvscpp/vshadow_test_read/: vshadow_test_read.vcproj
msvscpp/vshadow_test_seek/: vshadow_test_seek.vcproj
msvscpp/vshadow_test_store/: vshadow_test_store.vcproj
msvscpp/vshadow_test_store_block/: vshadow_test_store_block.vcproj
msvscpp/vshadow_test_store_descriptor/: vshadow_test_store_descriptor.vcproj
msvscpp/vshadow_test_support/: vshadow_test_support.vcproj
msvscpp/vshadow_test_volume/: vshadow_test_volume.vcproj
msvscpp/vshadowdebug/: vshadowdebug.vcproj
msvscpp/vshadowinfo/: vshadowinfo.vcproj
msvscpp/vshadowmount/: vshadowmount.vcproj
pyvshadow/: Makefile.am  pyvshadow.c  pyvshadow.h  pyvshadow_block.c  pyvshadow_block.h  pyvshadow_block_flags.c  pyvshadow_block_flags.h  pyvshadow_blocks.c  pyvshadow_blocks.h  pyvshadow_datetime.c  pyvshadow_datetime.h  pyvshadow_error.c  pyvshadow_error.h  pyvshadow_file_object_io_handle.c  pyvshadow_file_object_io_handle.h  pyvshadow_guid.c  pyvshadow_guid.h  pyvshadow_integer.c  pyvshadow_integer.h  pyvshadow_libbfio.h  pyvshadow_libcerror.h  pyvshadow_libclocale.h  pyvshadow_libcstring.h  pyvshadow_libfguid.h  pyvshadow_libvshadow.h  pyvshadow_python.h  pyvshadow_store.c  pyvshadow_store.h  pyvshadow_stores.c  pyvshadow_stores.h  pyvshadow_unused.h  pyvshadow_volume.c  pyvshadow_volume.h  setup.py.in
pyvshadow-python2/: Makefile.am
tests/: Makefile.am  pkgbuild.sh  pyvshadow_test_get_version.py  pyvshadow_test_open_close.py  pyvshadow_test_read.py  pyvshadow_test_seek.py  pyvshadow_test_store.py  pyvshadow_test_support.py  pyvshadow_test_volume.py  runtests.py  runtests.sh  syncsharedlibs.sh  test_api_functions.ps1  test_api_functions.sh  test_api_types.ps1  test_api_types.sh  test_library.ps1  test_library.sh  test_open_close.sh  test_python_module.sh  test_pyvshadow_open_close.sh  test_pyvshadow_seek.sh  test_read.sh  test_seek.sh  test_vshadowinfo.ps1  test_vshadowinfo.sh  vshadow_test_block.c  vshadow_test_block_descriptor.c  vshadow_test_block_range_descriptor.c  vshadow_test_block_tree.c  vshadow_test_block_tree_node.c  vshadow_test_error.c  vshadow_test_functions.c  vshadow_test_functions.h  vshadow_test_get_version.c  vshadow_test_getopt.c  vshadow_test_getopt.h  vshadow_test_io_handle.c  vshadow_test_libbfio.h  vshadow_test_libcdata.h  (+21 more)
tests/data/: block_descriptor.1  block_descriptor.error.1  block_range_descriptor.1  store_block_header.1  store_block_header.error.1
vshadowtools/: Makefile.am  byte_size_string.c  byte_size_string.h  debug_handle.c  debug_handle.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  vshadowdebug.c  vshadowinfo.c  vshadowmount.c  vshadowoutput.c  vshadowoutput.h  vshadowtools_getopt.c  vshadowtools_getopt.h  vshadowtools_i18n.h  vshadowtools_libbfio.h  vshadowtools_libcdata.h  vshadowtools_libcerror.h  vshadowtools_libcfile.h  vshadowtools_libclocale.h  vshadowtools_libcnotify.h  vshadowtools_libcpath.h  vshadowtools_libcstring.h  vshadowtools_libcsystem.h  vshadowtools_libfdatetime.h  vshadowtools_libfguid.h  vshadowtools_libuna.h  vshadowtools_libvshadow.h  vshadowtools_output.c  vshadowtools_output.h  (+3 more)
(+12 files in other folders)
