EXTRA_DIST = \
	libvshadow.pmdoc/01bin.xml.in \
	libvshadow.pmdoc/01bin-contents.xml \
	libvshadow.pmdoc/02include.xml.in \
	libvshadow.pmdoc/02include-contents.xml \
	libvshadow.pmdoc/03lib.xml.in \
	libvshadow.pmdoc/03lib-contents.xml \
	libvshadow.pmdoc/04share.xml.in \
	libvshadow.pmdoc/04share-contents.xml \
	libvshadow.pmdoc/05python.xml.in \
	libvshadow.pmdoc/05python-contents.xml \
	libvshadow.pmdoc/index.xml \
	libvshadow.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libvshadow.pmdoc/01bin.xml
	/bin/rm -f libvshadow.pmdoc/02include.xml
	/bin/rm -f libvshadow.pmdoc/03lib.xml
	/bin/rm -f libvshadow.pmdoc/04share.xml
	/bin/rm -f libvshadow.pmdoc/05python.xml
	/bin/rm -f libvshadow.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

