MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libuna/libuna.vcproj \
	libvshadow/libvshadow.vcproj \
	pyvshadow/pyvshadow.vcproj \
	vshadow_test_error/vshadow_test_error.vcproj \
	vshadow_test_get_version/vshadow_test_get_version.vcproj \
	vshadow_test_open_close/vshadow_test_open_close.vcproj \
	vshadow_test_read/vshadow_test_read.vcproj \
	vshadow_test_seek/vshadow_test_seek.vcproj \
	vshadowinfo/vshadowinfo.vcproj \
	vshadowmount/vshadowmount.vcproj \
	libvshadow.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

