MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libuna/libuna.vcproj \
	libvshadow/libvshadow.vcproj \
	pyvshadow/pyvshadow.vcproj \
	vshadow_test_block/vshadow_test_block.vcproj \
	vshadow_test_block_descriptor/vshadow_test_block_descriptor.vcproj \
	vshadow_test_block_range_descriptor/vshadow_test_block_range_descriptor.vcproj \
	vshadow_test_block_tree/vshadow_test_block_tree.vcproj \
	vshadow_test_error/vshadow_test_error.vcproj \
	vshadow_test_io_handle/vshadow_test_io_handle.vcproj \
	vshadow_test_notify/vshadow_test_notify.vcproj \
	vshadow_test_store/vshadow_test_store.vcproj \
	vshadow_test_store_block/vshadow_test_store_block.vcproj \
	vshadow_test_store_descriptor/vshadow_test_store_descriptor.vcproj \
	vshadow_test_support/vshadow_test_support.vcproj \
	vshadow_test_volume/vshadow_test_volume.vcproj \
	vshadowdebug/vshadowdebug.vcproj \
	vshadowinfo/vshadowinfo.vcproj \
	vshadowmount/vshadowmount.vcproj \
	libvshadow.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

